<resources>
    <string name="app_name">MyOmdbApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="search_button">Search</string>
    <string name="search_hint">Search by movie title</string>
    <string name="search_type">movie</string>
    <string name="default_poster">https://www.imdb.com/gallery/rg1859820288/mediaviewer/rm349532160</string>
    <string name="snackbar_title_not_found">The movie title you entered was not found</string>
    <string name="snackbar_title_empty">Please enter a movie title</string>
    <string name="network_not_available">Network not available! Please connect to the Internet.</string>
    <string name="title">Title</string>
    <string name="example_title">Wreck-It Ralph</string>
    <string name="released">Released</string>
    <string name="example_release">02 Nov 2012</string>
    <string name="runtime">Runtime</string>

    <string name="director">Director</string>
    <string name="example_director">Rich Moore</string>
    <string name="Genre">Genre</string>
    <string name="example_genre">Animation, Adventure, Comedy</string>
    <string name="Writer">Writer(s)</string>
    <string name="example_writer">Rich Moore (story), Phil Johnston (story), Jim Reardon (story), Phil Johnston (screenplay), Jennifer Lee (screenplay), John C. Reilly (additional story material)</string>
    <string name="actors">Actors</string>
    <string name="example_actors">John C. Reilly, Sarah Silverman, Jack McBrayer, Jane Lynch</string>
    <string name="plot">Plot</string>

</resources>
