<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:layout_marginTop="@dimen/card_margin"
    android:layout_marginBottom="@dimen/card_margin"
    android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/card_padding_large"
            android:paddingTop="@dimen/card_padding_large"
            android:paddingRight="@dimen/card_padding_large"
            android:paddingBottom="@dimen/card_padding_medium"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:fitsSystemWindows="true"
                android:transitionName="poster"
                tools:src="@drawable/favourite_added"
             />

            <android.support.v7.widget.GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                app:useDefaultMargins="true"
                android:layout_height="match_parent"
                app:columnCount="2">
                <TextView
                    app:layout_column="0"
                    app:layout_row="0"
                    android:text="@string/title"
                    style="@style/left_column_bold" />
                <TextView
                    style="@style/right_column_normal"
                    app:layout_column="1"
                    app:layout_row="0"
                    tools:text="@string/example_title"
                    android:id="@+id/grid_title" />
                <TextView
                    style="@style/left_column_bold"
                    app:layout_column="0"
                    app:layout_row="1"
                    android:text="@string/released" />
                <TextView
                    style="@style/right_column_normal"
                    app:layout_column="1"
                    app:layout_row="1"
                    tools:text="@string/example_release"
                    android:id="@+id/grid_released" />
                <TextView
                    style="@style/left_column_bold"
                    android:text="@string/runtime"
                    app:layout_column="0"
                    app:layout_row="2" />
                <TextView
                    style="@style/right_column_normal"
                    tools:text="jyoti"
                    app:layout_column="1"
                    app:layout_row="2"
                    android:id="@+id/grid_runtime" />
                <TextView
                    android:text="@string/director"
                    app:layout_column="0"
                    app:layout_row="3"
                    style="@style/left_column_bold" />
                <TextView
                    style="@style/right_column_normal"
                    tools:text="@string/example_director"
                    app:layout_column="1"
                    app:layout_row="3"
                    android:id="@+id/grid_director" />
                <TextView
                    style="@style/left_column_bold"
                    app:layout_column="0"
                    app:layout_row="4"
                    android:text="@string/Genre" />
                <TextView
                    style="@style/right_column_normal"
                    app:layout_column="1"
                    app:layout_row="4"
                    tools:text="@string/example_genre"
                    android:id="@+id/grid_genre" />
                <TextView
                    style="@style/left_column_bold"
                    android:text="@string/Writer"
                    app:layout_column="0"
                    app:layout_row="5" />
                <TextView
                    style="@style/right_column_normal"
                    app:layout_column="1"
                    app:layout_row="5"
                    android:layout_width="0dp"
                    tools:text="@string/example_writer"
                    android:id="@+id/grid_writers" />
                <TextView
                    style="@style/left_column_bold"
                    android:text="@string/actors"
                    app:layout_column="0"
                    app:layout_row="6" />
                <TextView
                    style="@style/right_column_normal"
                    app:layout_column="1"
                    app:layout_row="6"
                    tools:text="@string/example_actors"
                    android:id="@+id/grid_actors" />
                <TextView
                    app:layout_column="0"
                    app:layout_row="7"
                    style="@style/left_column_bold"
                    android:text="@string/plot" />
                <TextView
                    app:layout_column="1"
                    app:layout_row="7"
                    tools:text="jyoti"
                    style="@style/right_column_normal"
                    android:id="@+id/grid_plot"/>
            </android.support.v7.widget.GridLayout>

        </LinearLayout>

</ScrollView>